# SJTU-EST6501

./: .gitignore  README.md  REPORT.md  requirements.txt
.github/workflows/: build-all-binaries.yml  build-report.yml
MNIST_PYTHORCH_C/: CMakeLists.txt
MNIST_PYTHORCH_C/cc/pythorch/: CMakeLists.txt  conv.c  conv.h  gemm.c  gemm.h  modules.c  modules.h  pythorch.h  utils.c  utils.h
MNIST_PYTHORCH_C/python/: compiler.py  compiler.yaml
MNIST_PYTHORCH_C/templates/: template.c
MNIST_PYTHORCH_C/tests/: mnist.c
MNIST_PYTHORCH_C/tests/test_compiler/: mnist.c
MNIST_PYTHORCH_C/tests/test_simd/: scratch.c
MNIST_PYTHORCH_C/tests/test_stm32/: .mxproject  Makefile  stm32l475vgtx.ioc
MNIST_PYTHORCH_C/tests/test_stm32/Core/Src/: main.c
MNIST_PYTHORCH_C/tests/train_model/: main.py  main_stm32.py
ci/: bootstrap.sh  build_cmake.sh  build_stm32.sh  clean.sh  download_dataset.sh  generate_code.sh  generate_code_stm32.sh  pack_output.sh
ci/sjtu-embsys/: Dockerfile
